examples/test/testpolicy9903.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9903
  namespace: namespace391
spec:
  podSelector:
    matchLabels:
      key5: value37
      key44: value39
      key14: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value32
      podSelector:
        matchLabels:
          key5: value32
